feat: Add the randomizer

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 # Godot 4+ specific ignores
 .godot/
+/android/
 .nomedia
+*.uid
 
 # Godot-specific ignores
 .import/
+*.import
 export.cfg
 export_credentials.cfg
 
@@ -14,3 +17,5 @@ export_credentials.cfg
 .mono/
 data_*/
 mono_crash.*.json
+
+.editorconfig
